@@ -1,1 +1,4 @@
 noinst_PROGRAMS = altest
+
+README: gendocs.py altest.c
+	./gendocs.py altest.c README
